--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "sputnikvm-nostd"
 version = "0.1.0"
 authors = ["Wei Tang <hi@that.world>"]
 
+[lib]
+name = "sputnikvm"
+
 [dependencies]
 byteorder = { version = "1", default-features = false }
 lazy_static = { version = "0.2", path = "./rux/lazy_static", features = ["spin_no_std"] }
