--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ name = "sputnikvm"
 [dependencies]
 byteorder = { version = "1", default-features = false }
 lazy_static = { version = "0.2", path = "./rux/lazy_static", features = ["spin_no_std"] }
+sha3 = "0.6"
