--- a/sinits/Cargo.toml
+++ b/sinits/Cargo.toml
@@ -28,6 +28,7 @@ path = "../rux/selfalloc"
 [dependencies.sputnikvm]
 version = "0.7"
 default-features = false
+features = ["rust-secp256k1"]
 
 [dependencies.etcommon-bigint]
 version = "0.2"
